yaml/downstream-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: downstream
spec:
  selector:
    app: downstream
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
