yaml/downstream-service/ingress.yaml
apiVersion: extensions/v1beta1
#apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: koderover
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: gateway-ingress
spec:
  rules:
    - host: downstreamapi.8slan.com
      http:
        paths:
          - backend:
              serviceName: downstream
              servicePort: 8081
            path: /
            pathType: ImplementationSpecific
